# bbb-gpioctl

./: .gitignore  Cargo.toml  README.md  build.sh
gpio01/: label
gpio02/: label
src/: gpio.rs  main.rs
